팔로우관리_액티비티 초기, 이메일, 버튼

--- a/app/src/main/res/layout/activity_management_follow.xml
+++ b/app/src/main/res/layout/activity_management_follow.xml
@@ -1,9 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="10sp"
     tools:context=".Activity_Management_Follow">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/txt_title"
+        style="@style/TITLE_STYLE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="팔로우 관리" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:id="@+id/btn_follower"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onFollowClick"
+            android:text="팔로워" />
+
+
+        <Button
+            android:id="@+id/btn_following"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onFollowClick"
+            android:text="팔로잉" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/txt_count"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0명" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_follows"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp" />
+
+
+</LinearLayout>
